--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "@ionic/cli": "^7.2.1",
     "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -41,7 +42,7 @@
     "@angular-eslint/eslint-plugin-template": "^20.0.0",
     "@angular-eslint/schematics": "^20.0.0",
     "@angular-eslint/template-parser": "^20.0.0",
-    "@angular/cli": "20.3.8",
+    "@angular/cli": "^20.3.8",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/language-service": "^20.0.0",
     "@capacitor/cli": "7.4.4",
